code changes for icon changes

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,23 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="106"
+    android:viewportHeight="42">
+  <group android:scaleX="0.48"
+      android:scaleY="0.19018868"
+      android:translateX="27.56"
+      android:translateY="17.006039">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
+        android:pathData="M0,10.04L6.06,10.04L6.06,13.22C7.15,10.83 9,9.64 11.61,9.64C14.33,9.64 15.98,10.83 16.55,13.22C17.59,10.83 19.47,9.64 22.18,9.64C23.69,9.64 24.9,9.91 25.79,10.45C26.69,11 27.31,11.74 27.67,12.69C28.02,13.64 28.2,15.42 28.2,18.03L28.2,33.01L21.79,33.01L21.79,18.69C21.79,16.98 21.66,15.87 21.41,15.35C21.17,14.84 20.62,14.58 19.76,14.58C18.74,14.58 18.07,14.92 17.77,15.59C17.46,16.26 17.3,17.62 17.3,19.66L17.3,33.01L10.89,33.01L10.89,18.48C10.89,16.85 10.78,15.79 10.54,15.31C10.31,14.82 9.78,14.58 8.95,14.58C7.93,14.58 7.25,14.93 6.91,15.63C6.58,16.34 6.41,17.68 6.41,19.66L6.41,33.01L0,33.01L0,10.04ZM40.46,13.89C38.52,13.89 37.54,15.57 37.53,18.91L43.4,18.91C43.41,18.64 43.42,18.43 43.42,18.28C43.42,15.36 42.44,13.89 40.46,13.89ZM40.49,29.06C42.33,29.06 43.4,27.88 43.71,25.52L49.43,25.52C48.42,30.87 45.4,33.55 40.37,33.55C37.26,33.55 34.9,32.5 33.29,30.39C31.68,28.28 30.87,25.46 30.87,21.92C30.87,17.93 31.73,14.89 33.44,12.79C35.15,10.69 37.44,9.64 40.32,9.64C42.91,9.64 45.08,10.57 46.82,12.42C48.56,14.28 49.43,17.69 49.43,22.64L37.48,22.64L37.48,23.91C37.48,25.96 37.76,27.33 38.31,28.02C38.87,28.71 39.59,29.06 40.49,29.06ZM52.64,9.99L59.07,9.99L59.07,33.01L52.64,33.01L52.64,9.99ZM62.96,9.81L69.42,9.81L69.42,32.16C69.42,34.54 69.29,36.32 69.03,37.52C68.77,38.71 68.15,39.66 67.17,40.36C66.19,41.05 64.94,41.4 63.43,41.4C62.46,41.4 61.31,41.29 59.96,41.08L59.96,35.77C60.28,35.82 60.57,35.84 60.81,35.84C61.77,35.84 62.36,35.61 62.6,35.13C62.84,34.66 62.96,33.61 62.96,31.98L62.96,9.81ZM81.87,13.89C79.92,13.89 78.94,15.57 78.93,18.91L84.8,18.91C84.81,18.64 84.82,18.43 84.82,18.28C84.82,15.36 83.84,13.89 81.87,13.89ZM81.89,29.06C83.73,29.06 84.8,27.88 85.11,25.52L90.83,25.52C89.82,30.87 86.8,33.55 81.77,33.55C78.66,33.55 76.3,32.5 74.69,30.39C73.08,28.28 72.27,25.46 72.27,21.92C72.27,17.93 73.13,14.89 74.84,12.79C76.55,10.69 78.84,9.64 81.72,9.64C84.31,9.64 86.48,10.57 88.22,12.42C89.96,14.28 90.83,17.69 90.83,22.64L78.88,22.64L78.88,23.91C78.88,25.96 79.16,27.33 79.71,28.02C80.27,28.71 80.99,29.06 81.89,29.06ZM93.87,9.93L99.52,9.93L99.52,15.53C100.53,11.6 102.33,9.64 104.92,9.64C105.23,9.64 105.59,9.67 106,9.75L106,16.1C105.53,16.04 105.18,16.01 104.94,16.01C101.83,16.01 100.28,18.37 100.28,23.11L100.28,33.01L93.87,33.01L93.87,9.93Z"
         android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillColor="#DD1321"
+        android:fillType="nonZero"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M59.25,3.57C59.25,5.54 57.61,7.14 55.59,7.14C53.57,7.14 51.93,5.54 51.93,3.57C51.93,1.6 53.57,0 55.59,0C57.61,0 59.25,1.6 59.25,3.57ZM69.6,3.57C69.6,5.54 67.96,7.14 65.94,7.14C63.92,7.14 62.28,5.54 62.28,3.57C62.28,1.6 63.92,0 65.94,0C67.96,0 69.6,1.6 69.6,3.57Z"
+        android:strokeWidth="1"
+        android:fillColor="#0A4D8C"
+        android:fillType="nonZero"
+        android:strokeColor="#00000000"/>
+  </group>
 </vector>
